# misc

./: .gitignore
arduino/: Makefile  arduinocc.py  blink.cpp  control.cpp  display.cpp  main.cpp  tests.py
brainfuck-interpreter/: Makefile  main.c  main.c.unstable
chrono_editor/: .gitignore  CMakeLists.txt  Makefile  TODO  character.cpp  character.h  chrono_editor.pro  chrono_editor_en.ts  chrono_editor_fr.ts  edit.sh  game.cpp  game.h  gui.cpp  gui.h  main.cpp  sanity.c  snes9x_savestate_format.html  sramfile.cpp  sramfile.h  state.cpp  state.h  strings.h  struct.h  test.cpp  test.sh  test.srm  vue.cpp  vue.h
chrono_editor/doc/: chrono_trigger_hacking.txt  chrono_trigger_hacking_a.txt  exemples  sram_map.txt
chrono_editor/doc/chrono_trigger_database/: data_format.txt  enemy_ai_-_actions_long_notes.txt  enemy_ai_actions.txt  event_command_long_notes.txt  event_commands.txt  event_commands_beta.txt  game_notes.txt  info.txt  lists.txt  memory_locations.txt  memory_locations_beta.txt  memory_locations_long_notes.txt  offset_long_notes.txt  offsets_beta.txt  offsets_jpn.txt  offsets_na.txt  overworld_command_long_notes.txt  overworld_commands.txt  tech_animation.txt  unknowns_help_needed.txt
collection_musique/: Makefile  ajoutalbum.py  albummodel.cpp  albummodel.h  albums.py  collection_musique.pro  collection_musique_en.ts  connexion.h  connexion.py  csvparser.cpp  csvparser.h  customsqlmodel.cpp  customsqlmodel.h  customsqlmodel.py  database.py  defaultsqlmodel.cpp  defaultsqlmodel.h  defaulttableview.cpp  defaulttableview.h  login.cpp  login.h  main.cpp  main.py  sqlparser.cpp  sqlparser.h  usersmodel.cpp  usersmodel.h  usersview.cpp  usersview.h  vue.cpp  vue.h  vue.py
crc32/: Makefile  TODO  crc32.cpp  crc32.h  main.c  main.cpp  sfv.c  sfv.h  sfvfile.cpp  sfvfile.h
crc32_new/: Makefile  crc32.c
daleks/: Makefile  board.cpp  board.h  boardgl.cpp  boardgl.h  controlleur.cpp  controlleur.h  dalek.cpp  dalek.h  daleks.pro  doc.cpp  doc.h  main.cpp  partie.cpp  partie.h  vue.cpp  vue.h
g15plugins/: Makefile  g15hella.c  g15music.c  g15plugin_listen.py  pid.c  pid.h
game_of_life/: Makefile  main.c  patterns.h
id3v1/: Makefile  main.c  main.h
libcrc32/: crc32.c  crc32.h
libmd5/: Makefile  md5.c
libsha2/: Makefile
misc/: 24bit.c  Makefile  bin2iso.c  chuck_norris_facts.c  couleurs.h  dlink.c  eboxbw.py  enigme_du_lapin.c  ff_vi_advance_cksum.c  fgets.c  fibonacci.c  format.c  fsynckill.c  hexdump.c  hexdump.h  ips.c  keygen.c  list.c  millis.c  pacsize.py  pid.c  pid.h  ps3proxy.py  quicksort.c  shacrypt.c  sigint.c  sizeof.cpp  string_to_int.cpp  wii_key_gen.c
mp3_scanner/: Makefile  Makefile.in  config.h.in  configure  configure.ac  id3.c  id3.h  main.c
mp3_scanner/src/: Makefile.am  Makefile.in  genres.h  scanner.c
mp3player/: TODO
myos/: Makefile  boot.c  boot.h  envvar.c  envvar.h  kernel.h  main.c  panic.c  panic.h  shell.c  shell.h
pendu/: Makefile  anim.c  anim.h  fichiers.c  fichiers.h  modifications.c  modifications.h  pendu.c  pendu.h
picross/: Makefile  dummy.pro  dummy_grid.xml  vue_test.cpp  vue_test.h  xmlgridparser.cpp  xmlgridparser.h
poker/: Makefile  TODO  carte.cpp  carte.h  jeu.cpp  jeu.h  main.cpp  paquet.cpp  paquet.h  simulation.cpp  simulation.h
psptools/: Makefile  Makefile.mingw  ciso.c  ciso.h  pbp-pack.c  pbp-unpack.c  (+1 more)
(+217 files in other folders)
